# rinha

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  compose.processor.yaml  compose.yaml  docker-compose.yml  dockerfile  dockerfile.dev  perf.md  pyproject.toml  readme.md  todo.md
crates/srv/: Cargo.toml
crates/srv/src/: main.rs
crates/wrk/: Cargo.toml
docker/: compose.processor.yml
old/: Cargo.toml
old/src/: main.rs
old/src/rinha_ambulance/: mod.rs
old/src/rinha_chan/: mod.rs
old/src/rinha_conf/: mod.rs
old/src/rinha_domain/: mod.rs
old/src/rinha_load_balancer/: mod.rs
old/src/rinha_storage/: mod.rs
old/src/rinha_tracing/: mod.rs
old/src/rinha_worker/: mod.rs
scripts/: pyproject.toml  resultados-previa.ipynb
scripts/src/: main.ipynb
src/: main.rs
src/rinha_ambulance/: mod.rs
src/rinha_balancer/: mod.rs  upstream.rs
src/rinha_chan/: mod.rs
src/rinha_conf/: mod.rs
src/rinha_core/: mod.rs
src/rinha_domain/: mod.rs
src/rinha_http/: mod.rs
src/rinha_load_balancer/: mod.rs
src/rinha_net/: mod.rs
src/rinha_storage/: mod.rs
src/rinha_tracing/: mod.rs
src/rinha_worker/: mod.rs
