[package]
name = "rinha"
version = "0.0.1"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
derivative = "2.2.0"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = [
    "server",
    "client",
    "http1"
] }
hyper-util = { version = "0.1.16", features = [
    "tokio",
    "client",
    "client-legacy",
    "server",
    "http1"
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
socket2 = { version = "0.6.0", features = ["all"] }
thiserror = "2.0.12"
tikv-jemallocator = "0.6.0"
tokio = { version = "1.47.1", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
    "sync",
    "macros",
    "parking_lot"
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[profile.release]
opt-level = 3
# # flamegraph: echo -1 | sudo tee /proc/sys/kernel/perf_event_paranoid
# debug = true
# strip = false
# # default
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 16
rpath = false

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false
