[package]
name = "rinha"
version = "0.0.1"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"]}
http = "1.3.1"
jemallocator = "0.5.4"
pingora = { version = "0.5.0", features = ["lb"] }
pingora-runtime = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = "1.47.0"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["serde", "v4"]}

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 16
rpath = false

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

